--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,95 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body, input, button {
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Inconsolata', monospace;
 }
 body {
-    background: #edf0f1;
-    padding: 80px 0 0 0;
+    background: rgb(231, 115, 47);
+    /* padding: 80px 0 0 0; */
+}
+
+/* JS Interactive Header + Footer Props */
+.topbar__left {
+    float: left;
   }
+  .topbar__right {
+    float: right;
+  }
+  #footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+  }
+  #topbar,
+  #footer {
+      font-family: 'Gruppo', cursive;
+      height: 80px;
+      background-color: rgba(36, 124, 206, 0.7) !important;
+      text-align: center;
+      padding: 5px;
+      color: #fff;
+  
+  }
+  #topbar a {
+      color: #fff;
+      font-size: 1.2em;
+      padding: 5px;
+  }
+/* banner */
+.heading {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 100%;
+    color: #fff;;
+    text-decoration: underline;
+    padding-top: 10px;
+}
+
+/* app container */
+#app__container {
+    height: 500px;
+    max-width: 600px;
+    /* background-color: #333;    */
+    margin: auto;
+}
+/* about container */
+.container {
+    width: 60%;
+    border-radius: 25px;
+    box-shadow: 0 20px 40px 0px rgba(0,0,0,0.3);
+    margin-bottom: 50px;
+    margin: 50px auto;
+    margin-top: 50px;
+    padding-top: 20px;
+    
+}
+.section__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(36, 124, 206, 0.9) !important;
+    color: #fff;
+    font-size: 1.3em;
+    padding: 10px;
+}
+
 header {
     width: 100%;
     height: 80px;
-    position: fixed;
+    /* position: fixed; */
+    /* top: 0;
+    left: 0; */
+    margin: auto;
     padding: 15px;
-    top: 0;
-    left: 0;
+    
     z-index: 5;
-    background: #333;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    background: rgba(53, 104, 214, 0.9);
     box-shadow: 0px 2px 4px rgba(44,62,80,0.15);
 }
 header input {
@@ -23,15 +97,14 @@ header input {
     height: 50px;
     padding: 0 60px 0 0;
     float: left;
-    color: #fff;
-
-    background: rgba(53, 104, 214, 0.2);
+    color: #333;
+    background: #fff;
     border: 0px;
-    border-radius: 5px 25px 25px 5px;
-    
+    border-radius: 25px 25px;
+    text-align: center;
     
     font-size: 18px;
-    font-weight: 400;
+    font-weight: bolder;
     text-indent: 15px;
     box-shadow: none;
     outline: none;
@@ -41,6 +114,10 @@ header input {
     /* -ms-progress-appearance: none;
     -o-appearance: none;
     appearance: none; */
+}
+header input:active,
+header input::after {
+    background-color: red;
 }
 /* browser compatibility placeholder style */
 header input::-webkit-input-placeholder {
@@ -57,29 +134,30 @@ header input:-ms-input-placeholder {
 }
 /* header input add button properties */
 header button {
+
     width: 50px;
     height: 50px;
-    position: absolute;
-    top: 15px;
-    right: 15px;
+    
+    float: right;
     z-index: 2;
     border-radius: 25px;
-    background: #333;
+    background: #f5f5f5ff;
     color: #fff;
-    border:2px #fff solid;
+    border: 2px #fff solid;
     box-shadow: none;
     outline: none;
-
+    background: rgb(231, 115, 47);
     -webkit-appearance: none;
-    -moz-appearance: nonee;
+    -moz-appearance: none;
     -ms-progress-appearance: none;
     -o-appearance: none;
     appearance: none;
 
-    transition: all 2.5s;
+    transition: all 2000;
 }
 header button:hover {
-    background: rgba(231, 115, 47, 0.842);
+    background: yellowgreen;
+    color: #fff;
     cursor: pointer;
 }
 /* font awesome icon properties
@@ -189,26 +267,9 @@ i {
     color: lightgreen;
 }
 
-/* banner */
-.banner {
-    text-align: center;
-    margin: 0 auto;
-    width: 100%;
-    background: #333;
-    height: 50px;
-    color: rgba(231, 115, 47, 0.842);
-    text-decoration: underline;
-    border-radius: 10px 10px 10px 10px;
-    padding-top: 10px;
-}
-/* footer */
-.container {
-   margin: 0 auto;
-   background: rgba(53, 104, 214, 0.2);
-   width: 60%;
-   border-radius: 10px 10px
-}
-footer {
+
+
+/* footer {
     position: fixed;
     bottom: 0;
     background: #333;
@@ -216,9 +277,28 @@ footer {
     height: 50px;
     border-radius: 10px 10px 0 0;
     margin: 0 auto;
-}
-footer h5 {
-    text-align: center;
-    color: rgba(231, 115, 47, 0.842);
-    font-size: 18px;
+} */
+
+@media screen and (max-width: 900px) {
+    #app__container,
+    .app {
+        width: 100%;
+        
+    }
+    .container {
+        width: 100%;
+    }
+    #footer {
+        position: sticky;
+        bottom: 0;
+        right: 0;
+        left: 0;
+    }
+      .topbar__right,
+      .topbar__left {float: none;}
+
+    #topbar {
+        height: fit-content;
+    }
+    
 }
